# discord-tron-client

./: .gitignore  README.md  pyproject.toml
discord_tron_client/: __init__.py  __main__.py  app_factory.py  client.py  metadata_retrieval.py  nfixer.pt
discord_tron_client/classes/: api_client.py  app_config.py  auth.py  debug.py  discord_progress_bar.py  hardware.py  log_format.py  message.py  text_replies.py  tqdm_capture.py  uploader.py  worker_processor.py
discord_tron_client/classes/image_manipulation/: deep_floyd.py  diffusion.py  face_upscale.py  image_tiler.py  metadata.py  model_manager.py  pipeline.py  prompt_manipulation.py  resolution.py  upscaler.py
discord_tron_client/classes/image_manipulation/dreambooth/: dataset_from_csv.py  inference.py  interrogate.py  train_dreambooth.py  training.sh
discord_tron_client/classes/image_manipulation/dreambooth/midjourney-dataset/: MJ_Part1.csv  MJ_Part10.csv  MJ_Part11.csv  MJ_Part12.csv  MJ_Part13.csv  MJ_Part14.csv  MJ_Part15.csv  MJ_Part16.csv  MJ_Part17.csv  MJ_Part18.csv  MJ_Part19.csv  MJ_Part2.csv  MJ_Part20.csv  MJ_Part3.csv  MJ_Part4.csv  MJ_Part5.csv  MJ_Part6.csv  MJ_Part7.csv  MJ_Part8.csv  MJ_Part9.csv
discord_tron_client/classes/image_manipulation/pipeline_runners/: __init__.py  aura.py  base_runner.py  deep_floyd.py  extra.py  flux.py  img2img.py  kandinsky_2_2.py  ltxvideo.py  pixart.py  sana_runner.py  sd3_runner.py  sdxl_base.py  sdxl_refiner.py  text2img.py  z_image.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/: accel.py  flux.py  kandinsky_lora_loader.py  ltxvideo.py  pixart.py  sd3.py  video.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/ace_step/music_dcae/: music_dcae_pipeline.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/cosmos/: pipeline.py  transformer.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/flux2/: pipeline.py  transformer.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/kandinsky5_image/: pipeline_kandinsky5_t2i.py  transformer_kandinsky5.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/kandinsky5_video/: pipeline_kandinsky5_t2v.py  transformer_kandinsky5.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/stable_cascade/: __init__.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/wan/: transformer.py
discord_tron_client/classes/image_manipulation/pipeline_runners/overrides/z_image/: __init__.py  pipeline.py  transformer.py
discord_tron_client/classes/llama/: cpp.py  factory.py  runner.py
discord_tron_client/classes/llm/common/: chat_ml.py  token_tester.py
discord_tron_client/classes/llm/llama/: code.py  cpp.py  factory.py  runner.py
discord_tron_client/classes/llm/llama/code/: helper.py
discord_tron_client/classes/llm/stable_vicuna/: factory.py  py.py  runner.py  torch.py
discord_tron_client/classes/llm/stable_vicuna/helpers/: pipeline.py
discord_tron_client/classes/llm/stablelm/: factory.py  py.py  runner.py
discord_tron_client/classes/llm/stablelm/helpers/: predict.py
discord_tron_client/classes/llm/stableml/: factory.py
discord_tron_client/classes/stableml/: py.py  runner.py
discord_tron_client/classes/stableml/helpers/: predict.py
discord_tron_client/classes/tts/bark/: __init__.py  factory.py  runner.py  torch.py
discord_tron_client/classes/tts/bark_tts/: __init__.py  factory.py  runner.py  torch.py
discord_tron_client/config/: example.json
discord_tron_client/message/: discord.py  job_queue.py
discord_tron_client/modules/image_generation/: generator.py  variation.py
discord_tron_client/ws_client/: __init__.py  client.py
