[tool.poetry]
name = "discord-tron-client"
version = "0.1.0"
description = "A worker process for PyTorch nodes that connect to the central Discord bot hub."
authors = ["bghira <bghira@users.github.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "discord_tron_client"}]

[tool.poetry.scripts]
client = "discord_tron_client.__main__:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
websockets = "^10.4"
poetry = "^1.4.1"
flask = "^2.2.3"
psutil = "^5.9.4"
websocket = "^0.2.1"
diffusers = "^0.16.1"
transformers = "^4.28.1"
tensorflow = "^2.12.0"
accelerate = "^0.18.0"

numpy = ">=1.23.2"
torch = {version = "2.0.0", allow-prereleases = true}
torchaudio = { version = ">=0.12.1", source="torch"}
colorama = "^0.4.6"
xformers = {version = "^0.0.20.dev526", allow-prereleases = true}
compel = "^1.1.3"
llama-cpp-python = "^0.1.36"
peft = "^0.2.0"
sentencepiece = "^0.1.98"
tokenizers = "^0.13.3"
tensorrt = "^8.6.0"
suno-bark = {git = "https://github.com/bghira/bghira-bark"}
pydub = "^0.25.1"
tiktoken = "^0.3.3"
pyopenssl = "^23.1.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
