[tool.poetry]
name = "discord-tron-client"
version = "0.1.0"
description = "A worker process for PyTorch nodes that connect to the central Discord bot hub."
authors = ["bghira <bghira@users.github.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "discord_tron_client"}]

[tool.poetry.scripts]
client = "discord_tron_client.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
websockets = "^10.4"
poetry = "^1.4.1"
flask = "^2.2.3"
psutil = "^5.9.4"
websocket = "^0.2.1"
diffusers = {git = "https://github.com/huggingface/diffusers"}
transformers = "^4.47.1"
tensorflow = {extras = ["cuda"], version = "^2.17.0"}
accelerate = "^0.29.3"

numpy = "<2.0.0"
torch = {version = "^2.5.1+cu124", source = "pytorch"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch"}
colorama = "^0.4.6"
compel = "^2.0.2"
llama-cpp-python = "^0.1.74"
peft = {git = "https://github.com/huggingface/peft"}
sentencepiece = "^0.2.0"
tokenizers = "^0.21.0"
suno-bark = {git = "https://github.com/bghira/bghira-bark"}
pydub = "^0.25.1"
tiktoken = "^0.3.3"
pyopenssl = "^23.1.1"
black = "^23.3.0"
torchvision = {version = "^0.20.1+cu124", source = "pytorch"}
torchmetrics = "^0.11.4"
opencv-contrib-python = "^4.7.0.72"
controlnet-aux = "^0.0.3"
k-diffusion = "^0.0.14"
safetensors = "^0.4.3"
split-image = "^2.0.1"
realesrgan = "^0.3.0"
invisible-watermark = "^0.2.0"
discord-py-slash-command = "^4.2.1"
dadaptation = "^3.1"
virtualenv = "^20.26.4"
xformers = {version = "^0.0.28.post3", source = "pytorch"}
importlib = "^1.0.4"
clip-anytorch = "^2.6.0"
protobuf = "<5.0.0"
lycoris-lora = {git = "https://github.com/kohakublueleaf/lycoris", rev = "dev"}
beautifulsoup4 = "^4.12.3"
imageio-ffmpeg = "^0.5.1"
optimum-quanto = "^0.2.6"
triton = {version = "^3.1.0", source = "pytorch"}
pytorch-triton = {version = "^3.0.0", source = "pytorch"}
torchao = "^0.8.0"
deepcache = "^0.1.1"

[[tool.poetry.source]]
name = "default"
url = "https://pypi.org/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch"
priority = "supplemental"
url = "https://download.pytorch.org/whl/cu124"

[[tool.poetry.source]]
name = "pytorch-nightly"
priority = "supplemental"
url = "https://download.pytorch.org/whl/nightly/cu124"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core", "torch"]
build-backend = "poetry.core.masonry.api"
